# PIL

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
contracts/cosmwasm/: Cargo.toml
contracts/cosmwasm/src/: contract.rs  error.rs  ibc.rs  msg.rs  state.rs
crates/pil-benchmarks/: Cargo.toml
crates/pil-benchmarks/benches/: core_benchmarks.rs
crates/pil-benchmarks/src/: lib.rs
crates/pil-bridge/: Cargo.toml
crates/pil-bridge/src/: aggregator.rs  lib.rs  relayer.rs
crates/pil-cardano/: Cargo.toml
crates/pil-cardano/src/: batcher.rs  datum.rs  lib.rs  redeemer.rs  transaction.rs  utxo.rs  validator.rs
crates/pil-circuits/: Cargo.toml
crates/pil-circuits/src/: gadgets.rs  lib.rs  transfer.rs  wealth.rs  withdraw.rs
crates/pil-cli/: Cargo.toml
crates/pil-cli/src/: main.rs
crates/pil-client/: Cargo.toml
crates/pil-client/src/: lib.rs
crates/pil-cosmos/: Cargo.toml
crates/pil-cosmos/src/: contract.rs  ibc.rs  lib.rs  msg.rs  state.rs
crates/pil-groth16-wrapper/: Cargo.toml
crates/pil-groth16-wrapper/src/: circuit.rs  lib.rs  prover.rs  serialise.rs  verifier.rs
crates/pil-hydra/: Cargo.toml
crates/pil-hydra/src/: head.rs  lib.rs  snapshot.rs  state.rs  sync.rs
crates/pil-integration-tests/: Cargo.toml
crates/pil-integration-tests/src/: lib.rs  tests.rs
crates/pil-node/: Cargo.toml
crates/pil-node/src/: lib.rs
crates/pil-note/: Cargo.toml
crates/pil-note/src/: encryption.rs  keys.rs  lib.rs  note.rs  nullifier.rs  stealth.rs
crates/pil-pool/: Cargo.toml
crates/pil-pool/src/: epoch.rs  lib.rs  nullifier_set.rs  pool.rs
crates/pil-primitives/: Cargo.toml
crates/pil-primitives/src/: commitment.rs  domain.rs  envelope.rs  hash.rs  lib.rs  types.rs
crates/pil-prover/: Cargo.toml
crates/pil-prover/src/: lib.rs
crates/pil-rpc/: Cargo.toml
crates/pil-rpc/src/: lib.rs
crates/pil-sdk/: Cargo.toml
crates/pil-sdk/src/: lib.rs
crates/pil-tree/: Cargo.toml
crates/pil-tree/proptest-regressions/: lib.txt
crates/pil-tree/src/: lib.rs
crates/pil-verifier/: Cargo.toml
crates/pil-verifier/src/: lib.rs
engine/: .dockerignore  .env.example  Dockerfile  __init__.py  pyproject.toml
engine/analyzer/: __init__.py
engine/analyzer/move/: __init__.py  move_analyzer.py
engine/analyzer/solana/: __init__.py  anchor_analyzer.py
engine/analyzer/soul/: __init__.py  protocol_model.py
engine/analyzer/soul/detectors/: __init__.py  access_control.py  bridge.py  economic.py  nullifier.py  privacy.py  zk_proof.py
engine/analyzer/web3/: __init__.py  analyzer.py  base_detector.py  llm_analyzer.py  registry.py  slither_runner.py
engine/analyzer/web3/detectors/: __init__.py  access_control.py  arithmetic.py  bridge.py  centralization.py  code_quality.py  cross_contract.py  defi.py  delegatecall.py  denial_of_service.py  flash_loan.py  gas_optimization.py  governance.py  mev.py  proxy.py  reentrancy.py  signature.py  storage.py  time_manipulation.py  token_standard.py  transient_storage.py  (+2 more)
engine/api/: errors.py  main.py
engine/api/middleware/: auth.py  metrics.py  rate_limit.py  rbac.py  request.py  tenant.py
engine/api/routes/: analytics.py  audit.py  auth.py  collaboration.py  dashboard.py  diff.py  findings.py  health.py  nl_query.py  notifications.py  orgs.py  projects.py  quickscan.py  reports.py  scans.py  soul.py  webhooks.py
engine/api/services/: notifications.py
engine/cli/: __init__.py  main.py
engine/core/: __init__.py  ast_analyzer.py  cache.py  call_graph.py  cfg.py  chains.py  compliance.py  config.py  cross_contract_taint.py  database.py  encryption.py  llm_client.py  logging.py  pagination.py  types.py
engine/fuzzer/: __init__.py  bytecode_analyzer.py  concolic.py  corpus_evolution.py  differential.py  exploit_composer.py  feedback_loop.py  forge_executor.py  gas_optimized_tests.py  gas_profiler.py  invariant_dsl.py  invariant_synth.py  llm_oracle.py  mutation_engine.py  parallel.py  property_tester.py  soul_fuzzer.py  state_replay.py  stateful.py  symbolic.py  taint_mutator.py
engine/ingestion/: contract_fetcher.py  github.py  solidity_compiler.py  soul_fetcher.py  vyper_compiler.py
engine/integrations/: github_app.py  scm.py
engine/migrations/: env.py
engine/migrations/versions/: 001_initial.py  002_soul_campaigns.py  003_add_password_hash.py  004_reconcile_soul_campaigns.py  005_v2_1_analytics_audit.py
engine/ml/: __init__.py  auto_triage.py  feedback.py  nl_query.py  vuln_model.py
engine/models/: __init__.py  audit.py  base.py  collaboration.py  scan.py  soul.py  user.py
engine/pipeline/: __init__.py  orchestrator.py  tasks.py
engine/plugins/: __init__.py  loader.py
engine/remediator/: __init__.py  patch_generator.py  remediation_engine.py  templates.py
engine/reports/: __init__.py  generator.py
engine/reports/templates/: report.html  report_pdf.html
engine/scripts/: export_openapi.py  seed_dev.py
engine/tests/: __init__.py  conftest.py  conftest_integration.py  test_analytics.py  test_api_soul.py  test_cache.py  test_cli.py  test_config.py  test_github_app.py  test_integration.py  test_ml_modules.py  test_models.py  test_multichain_analyzers.py  test_mutation_engine.py  test_pagination.py  test_plugin_loader.py  test_protocol_model.py  test_scm_adapters.py  test_security_modules.py  test_soul_fuzzer.py  test_types.py  test_v1_api_routes.py  test_v2_engines.py
engine/verifier/: __init__.py  formal.py  poc_generator.py  sandbox.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_envelope.rs  fuzz_merkle_tree.rs  fuzz_nullifier.rs  fuzz_poseidon.rs
sdk/: README.md  pyproject.toml
sdk/typescript/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.test.ts  client.ts  domain.test.ts  domain.ts  index.ts  note.test.ts  note.ts  poseidon.ts  prover.ts  utils.test.ts  utils.ts  wallet.test.ts  wallet.ts
sdk/zaseon_sdk/: __init__.py  client.py  models.py
(+97 files in other folders)
