[workspace]
resolver = "2"
members = [
  "crates/pil-primitives",
  "crates/pil-note",
  "crates/pil-tree",
  "crates/pil-circuits",
  "crates/pil-prover",
  "crates/pil-verifier",
  "crates/pil-pool",
  "crates/pil-node",
  "crates/pil-client",
  "crates/pil-sdk",
  "crates/pil-rpc",
  "crates/pil-cli",
  "crates/pil-cardano",
  "crates/pil-cosmos",
  "crates/pil-bridge",
  "crates/pil-groth16-wrapper",
  "crates/pil-hydra",
  "crates/pil-integration-tests",
  "crates/pil-benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Soul-Research-Labs/PIL"
rust-version = "1.75"

[workspace.dependencies]
# ZK / Crypto
halo2_proofs = "0.3"
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"
rand = "0.8"
subtle = "2.5"
blake2 = "0.10"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
bip39 = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
base64 = "0.22"

# Async / Networking
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Cosmos / IBC
cosmwasm-std = "2.0"
cosmwasm-schema = "2.0"
cw-storage-plus = "2.0"

# Cardano
pallas-primitives = "0.30"
pallas-codec = "0.30"

# Logging / Errors
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }
rustyline = "14.0"

# Testing
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
