[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zaseon-sdk"
version = "0.1.0"
description = "Python SDK for the ZASEON smart contract security platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "ZASEON Team" }]
keywords = ["smart-contracts", "security", "fuzzing", "solidity", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/OWNER/zaseon"
Documentation = "https://docs.zaseon.dev"
Repository = "https://github.com/OWNER/zaseon"
