[package]
name = "pil-cosmwasm"
version = "0.1.0"
edition = "2021"
description = "PIL Privacy Pool CosmWasm smart contract for Cosmos chains"
license = "MIT OR Apache-2.0"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Use library feature to disable entry points (for use as a dependency)
library = []

[dependencies]
cosmwasm-std = "2.0"
cosmwasm-schema = "2.0"
cw-storage-plus = "2.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
cosmwasm-vm = "2.0"
