[package]
name = "pil-bridge"
description = "Cross-chain bridge adapter for PIL — Cardano↔Cosmos epoch sync, light client verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-pool = { path = "../pil-pool" }
pil-cardano = { path = "../pil-cardano" }
pil-cosmos = { path = "../pil-cosmos" }
pasta_curves = { workspace = true }
ff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
