[package]
name = "pil-circuits"
description = "Halo2 ZK circuits for PIL — transfer, withdraw, wealth proof, aggregation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-tree = { path = "../pil-tree" }
halo2_proofs = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
