[package]
name = "pil-cli"
description = "Interactive CLI for PIL — deposit, send, withdraw, balance, history"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pil"
path = "src/main.rs"

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-sdk = { path = "../pil-sdk" }
pil-rpc = { path = "../pil-rpc" }
pil-cardano = { path = "../pil-cardano" }
pasta_curves = { workspace = true }
ff = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
