[package]
name = "pil-cli"
description = "Interactive CLI for PIL — deposit, send, withdraw, balance, history"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pil"
path = "src/main.rs"

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-sdk = { path = "../pil-sdk" }
pil-rpc = { path = "../pil-rpc" }
pil-prover = { path = "../pil-prover" }
pil-cardano = { path = "../pil-cardano" }
pil-client = { path = "../pil-client" }
pil-note = { path = "../pil-note" }
pasta_curves = { workspace = true }
ff = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
