[package]
name = "pil-client"
description = "PIL client wallet — key management, note tracking, coin selection"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-note = { path = "../pil-note" }
pil-tree = { path = "../pil-tree" }
pasta_curves = { workspace = true }
ff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
