[package]
name = "pil-groth16-wrapper"
description = "Groth16 proof wrapper for PIL — re-proves Halo2/IPA proofs over BLS12-381 for Cardano on-chain verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-verifier = { path = "../pil-verifier" }
pasta_curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }

# BLS12-381 for Groth16
ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge", "r1cs"] }
