[package]
name = "pil-hydra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cardano Hydra L2 head management for PIL privacy pools"

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-pool = { path = "../pil-pool" }
pil-note = { path = "../pil-note" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake2.workspace = true
hex.workspace = true

[dev-dependencies]
rand.workspace = true
ff.workspace = true
