[package]
name = "pil-node"
description = "PIL prover daemon — note store, batch accumulator, proof pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-pool = { path = "../pil-pool" }
pil-prover = { path = "../pil-prover" }
pil-note = { path = "../pil-note" }
pasta_curves = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
