[package]
name = "pil-note"
description = "Note model, spending/viewing keys, nullifier derivation, stealth addresses, and note encryption for PIL"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pasta_curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
