[package]
name = "pil-pool"
description = "Privacy pool state machine — deposit, transfer, withdraw, epoch management, compliance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-tree = { path = "../pil-tree" }
pil-note = { path = "../pil-note" }
pil-verifier = { path = "../pil-verifier" }
pasta_curves = { workspace = true }
ff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
