[package]
name = "pil-primitives"
description = "Core cryptographic primitives for PIL — Poseidon hash, Pedersen commitments, field types, proof envelopes"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
halo2_proofs = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
blake2 = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
