[package]
name = "pil-prover"
description = "ZK proof generation for PIL — setup, prove, async pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-circuits = { path = "../pil-circuits" }
halo2_proofs = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
