[package]
name = "pil-rpc"
description = "Axum HTTP server for PIL — REST API, relay jitter, proof envelope unwrap"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-pool = { path = "../pil-pool" }
pil-sdk = { path = "../pil-sdk" }
pil-node = { path = "../pil-node" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
