[package]
name = "pil-rpc"
description = "Axum HTTP server for PIL — REST API, relay jitter, proof envelope unwrap"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-pool = { path = "../pil-pool" }
pil-prover = { path = "../pil-prover" }
pil-verifier = { path = "../pil-verifier" }
pil-node = { path = "../pil-node" }
pasta_curves = { workspace = true }
ff = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
