[package]
name = "pil-tree"
description = "Append-only incremental Merkle tree (depth 32, Poseidon) for PIL note commitments"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pasta_curves = { workspace = true }
ff = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
