[package]
name = "pil-verifier"
description = "ZK proof verification for PIL — verify transfer, withdraw, batch verify"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pil-primitives = { path = "../pil-primitives" }
pil-circuits = { path = "../pil-circuits" }
halo2_proofs = { workspace = true }
pasta_curves = { workspace = true }
ff = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
